[package]
name = "bellperson"
authors = [
  "dignifiedquire <me@dignifiedquire.com>",
  "Sean Bowe <ewillbefull@gmail.com>",
]
description = "zk-SNARK library"
documentation = "https://docs.rs/bellperson"
homepage = "https://github.com/filecoin-project/bellman"
license = "MIT/Apache-2.0"
repository = "https://github.com/filecoin-project/bellman"
version = "0.16.1"
readme = "README.md"
edition = "2018"

[dependencies]
bit-vec = "0.6"
blake2s_simd = "0.5"
ff = "0.10.0"
group = "0.10.0"
rand_core = "0.6"
byteorder = "1"
log = "0.4.8"
lazy_static = "1.4.0"
rand = "0.8"
rayon = "1.3.0"
memmap = "0.7.0"
thiserror = "1.0.10"
rustc-hash = "1.1.0"
num_cpus = "1"
crossbeam-channel = "0.5.0"
digest = "0.9.0"
itertools = "0.10.0"
bincode = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.9"
blstrs = { git = "https://github.com/filecoin-project/blstrs", branch = "halo" }
pairing = "0.20"

# gpu feature 
rust-gpu-tools = { version = "0.4.0", optional = true }
ff-cl-gen = { git = "https://github.com/filecoin-project/ff-cl-gen", branch = "halo", optional = true }
fs2 = { version = "0.4.3", optional = true }
yastl = "0.1.2"

[dev-dependencies]
hex-literal = "0.3"
rand_xorshift = "0.3"
env_logger = "0.9.0"
criterion = "0.3.2"
rand_chacha = "0.3"
csv = "1.1.5"
tempfile = "3.1.0"
subtle = "2.2.1"

[features]
default = ["groth16"]
gpu = ["rust-gpu-tools", "ff-cl-gen", "fs2"]
groth16 = []

# This feature disables/modifies long running tests to make the suitable for code coverage
# reporting
_coverage = []

[[test]]
name = "mimc"
path = "tests/mimc.rs"
required-features = ["groth16"]

[badges]
maintenance = { status = "actively-developed" }


[[bench]]
name = "lc"
harness = false

[patch.crates-io]
pairing = { git = "https://github.com/dignifiedquire/pairing", branch = "patch-1" }


