
[package]
name = "bellpersn-verifier-bench"
version = "0.0.1"
edition = "2018"

[dependencies]
bellperson = { path = "../.." }
ff = "0.10.0"
group = "0.10.0"
structopt = { version = "0.3", default-features = false }
pretty_env_logger = "0.4.0"
rand = "0.8"
sha2 = "0.9"
bincode = "1.3.1"
pairing = "0.20"
blstrs = { git = "https://github.com/filecoin-project/blstrs", branch = "halo" }


[features]
default = ["groth16"]
gpu = ["bellperson/gpu"]
groth16 = ["bellperson/groth16"]

[patch.crates-io]
pairing = { git = "https://github.com/dignifiedquire/pairing", branch = "patch-1" }